# src/modules/saving-goal/dto/update-saving-goal.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from "@nestjs/mapped-types";
+import createSavingGoalDto from "./create-saving-goal.dto";
+
+export default class updateSavingGoalDto extends PartialType(createSavingGoalDto) { }
